# valinor

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.simple  Dockerfile.worker  INFRASTRUCTURE.md  LICENSE  Makefile  README.md  README_DEPLOYMENT.md  README_SIMPLE.md  SIMPLIFICATION_REPORT.md  STRUCTURE.md  TESTING_INSTRUCTIONS.md  alembic.ini  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  package.json  prettier.config.js  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_simple.txt  serve_web.py  setup.sh  simple_api.py  start_mvp.sh  start_simple.sh  test_monkey_patch.py  test_provider_switch.py  test_real_switching.py  tsconfig.json  valinor_runner.py
.claude/: d4c-agent-infrastructure-guide.html
alembic/: env.py
api/: __init__.py  auth.py  deps.py  email_digest.py  logging_config.py  main.py  metrics.py  models.py  pdf_generator.py  tasks.py  tenant.py  webhooks.py
deploy/: deploy-cloudflare.sh  production.env.example  staging.env.example
docs/: AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  DOMAIN_MODEL.md  LLM_PROVIDER_ARCHITECTURE.md  MIGRATION_PLAN.md  SECURITY_TESTING.md  SUPPORTED_SOURCES.md  TESTING.md
investigacion/: 00_INDICE_CONSOLIDADO.md  00_MEJORA_CONTINUA.md  01_core_valinor_engine.md  02_core_agents_system.md  03_core_tools.md  04_api_layer.md  05_web_frontend.md  06_worker_system.md  07_docker_deploy_infra.md  08_mcp_servers.md  09_security_suite.md  10_testing_infrastructure.md  11_documentation_analysis.md  12_packages_monorepo.md  13_apps_layer.md  14_llm_provider_architecture.md  15_data_pipeline_etl.md  16_knowledge_graph_verification.md  17_domain_model.md  18_shared_module.md  19_scripts_automation.md  20_dependencies_analysis.md  21_git_history_analysis.md  22_claude_agents_config.md  23_api_refinement_system.md  24_migration_simplification.md  25_competitive_market_analysis.md  informe_directorio_valinor_2026-03-23.md
mcp_servers/: README.md  __init__.py  etendo_server.py
scripts/: claude_proxy.py  cleanup_uploads.py  dev.sh  docker-compose.dev.yml  health_check.sh  init.sql  rebuild.sh  seed_demo_db.py  seed_demo_profile.py  setup_gloria_connection.py  setup_infra_val23.sh  smoke_test.sh  test_gloria_queries.py
security/: __init__.py  adversarial_inputs.py  (+2 more)
(+381 files in other folders)
